fixing outline blue active box on mobile buttons

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 /* * Global Styles */
+* {
+   -webkit-tap-highlight-color: transparent;
+}
+
 body {
   font-family: 'Inter', sans-serif;
   background: #1F2029;
